Fix mobile overflow.

--- a/public/style.css
+++ b/public/style.css
@@ -63,6 +63,7 @@ p {
 
 span.about {
   width: 440px;
+  max-width: 95%;
   display: flex;
   justify-content: space-between;
   margin: 1em auto;
